# template-base

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_SYSTEM.md  CONTRIBUTING.md  Dockerfile  GROUNDING.md  MEMORY.md  Makefile  README.md  SECURITY.md  docker-compose.yml  opencode.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
.opencode/agents/: OVERRIDES.md  data-engineer.md  reviewer.md
.opencode/context/: registry.yaml
.opencode/context/default/: architecture.md  knowledge.md
.opencode/kb/: index.md
.opencode/kb/architecture/: index.md
.opencode/kb/bootstrap/: index.md
.opencode/kb/confidence/: index.md
.opencode/kb/consensus/: index.md
.opencode/kb/data-quality/: index.md
.opencode/kb/dbt/: index.md
.opencode/kb/duckdb/: index.md
.opencode/kb/git-ops/: index.md
.opencode/kb/langgraph/: index.md
.opencode/kb/medallion/: index.md
.opencode/kb/observability/: index.md
.opencode/kb/postgres/: index.md
.opencode/kb/prefect/: index.md
.opencode/kb/pydantic/: index.md
.opencode/kb/python/: index.md
.opencode/kb/qdrant/: index.md
.opencode/kb/rag/: index.md
.opencode/kb/redis/: index.md
.opencode/skills/data-engineering/: SKILL.md
cli/: flowcheck.py
data/generators/: ecommerce.py
docs/: AGENT_PROMPT.md  knowledge_base.md
scripts/: deploy_to_github.ps1  init_context.ps1  init_project.ps1  init_project.sh  iterate_spec.ps1  run_demo.py
scripts/hooks/: post_task.ps1  pre_task.ps1
spec/: README.md  design.md  lessons.md  production_readiness.md  quality_gates.py  todo.md
spec/brainstorm/example/: BRAINSTORM.md
spec/define/example/: DEFINE.md
spec/design/example/: DESIGN.md
src/: main.py
src/agents/: analytics_agent.py  base.py  code_gen_agent.py  data_pipeline_agent.py  orchestrator.py  reviewer_agent.py
src/core/: agent_registry.py  auto_doc.py  auto_git.py  bootstrapper.py  confidence.py  config.py  consensus.py  data_quality.py  decision_log.py  distributed_state.py  evolve_engine.py  harness.py  harvest_daemon.py  learnings.py  llm.py  local_backend.py  message_bus.py  planner.py  task_queue.py  telemetry.py  template_sync.py  usage.py
src/pipelines/medallion/: bronze.py  gold.py  run.py  silver.py
src/rag/: ingest.py  retrieve.py
src/schemas/: decisions.py  messages.py  state.py  tasks.py
src/tools/: database.py  vector.py
tests/: conftest.py  test_core.py  test_evolve.py
