[project]
name = "template-base"
version = "0.1.0"
description = "LTADE (Laurent Template AI Data Engineering) Template — Multi-Agent Pipelines, Analytics, and Agentic Workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=15.4.0",
    "dbt-postgres>=1.10.0",
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langgraph>=1.1.10",
    "openinference-instrumentation-langchain>=0.1.63",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "prefect>=3.6.29",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.7.0",
    "qdrant-client>=1.17.1",
    "redis[hiredis]>=5.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.46.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "faker>=33.0.0",
]

[project.scripts]
orchestrator = "src.agents.orchestrator:main"
data-pipeline = "src.agents.data_pipeline_agent:main"
analytics = "src.agents.analytics_agent:main"
code-gen = "src.agents.code_gen_agent:main"
reviewer = "src.agents.reviewer_agent:main"
flowcheck = "cli.flowcheck:main"
generate-data = "data.generators.ecommerce:generate_all"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
